corrigindo margin .link_item

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
     color: var(--cinza_texto);
     margin-top: 4px;
     margin-bottom: 4px;
-    margin-left: 14px;
+    margin-right:32px;
     padding: 4px 0px;
     font-size: 16px;
     font-weight: 500;
