testando tirar margin left de .menu__logo

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     height: 44px;
     padding: 0px 32px;
     margin-top: 18px;
+    margin-left: 10px;
 }
 .menu__logo{
     display: flex;
@@ -29,7 +30,9 @@
     align-items: center;
     position: static;
     height: 26.99px;
-    margin: 8.5px 263.5px 8.5px 32px;
+    margin-top: 8.5px;  
+    margin-right:263.5px;
+    margin-bottom: 8.5px;
 }
 .logo_img{
     position: static;
