--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@
     font-family: var(--fonte_principal);
     color: var(--cinza_texto);
     margin-top: 4px;
-    margin-bottom: 4px;
     margin-right:32px;
+    margin-bottom: 4px;
+    margin-left: 5px;
     padding: 4px 0px;
     font-size: 16px;
     font-weight: 500;
