--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
     --vinho_botao: #8E2424;
     --cinza_texto: #667085;
     --preto_nome: #3A404E;
+    --preto_nome: #3A404E;
+    --preto_header: #101828;
     --fonte_principal: 'inter';
+}
+    max-width: 100%;
+    height: 100vh;
 }
 * {
     margin: 0;
@@ -116,4 +121,15 @@ header{
     width: 1308x;
     height: 407px;
     padding: 96px 0px;
+}
+.header__sobre{
+    position: static;
+    font-family: var(--fonte_principal);
+    color: var(--vinho_botao);
+    width: 78px;
+    height: 24px;
+    margin: 96px 618px 5px 618px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
 }
