--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --preto_header: #101828;
     --fonte_principal: 'inter';
 }
+body{
     max-width: 100%;
     height: 100vh;
 }
@@ -132,4 +133,14 @@ header{
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
+}
+.header__titulo{
+    position: static;
+    font-family: var(--fonte_principal);
+    color: var(--preto_header);
+    height: 60px;
+    margin: 5px  426px 5px 426px;
+    font-size: 31px;
+    font-weight: 600;
+    line-height: 60px;
 }
